utils/k8s/api-gateway_development.yaml
###API GATEWAY DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-grpc-api-gateway-svc
  labels: 
    app_name: go-grpc-project
    app: go-grpc-api-gateway
    tier: svc
spec:
  selector:
    matchLabels:
      app: go-grpc-api-gateway
      tier: svc
  template:
    metadata:
      labels:
        app: go-grpc-api-gateway
        tier: svc
    spec:
      containers:
      - name: go-grpc-api-gateway
        image: utils-go-grpc-api-gateway
        imagePullPolicy: Never
        resources:
          requests:
            memory: "64Mi"
            cpu: "256m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
          name: gateway-port
---
###GO-GRPC-API-GATEWAY-SERVICE
apiVersion: v1
kind: Service
metadata:
  name: go-grpc-api-gateway
spec:
  type: LoadBalancer
  externalIPs:
    - "49.36.81.110"
    - "192.168.29.14"
  selector:
    app: go-grpc-api-gateway
    tier: svc
  ports:
  - port: 3000
    targetPort: 3000
    name: gateway-port
    protocol: TCP
