utils/k8s/auth-svc_deployment.yaml
###AUTH SVC DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-grpc-auth-svc
  labels:
    app_name: go-grpc-project
    app: go-grpc-auth-svc
    tier: svc
spec:
  selector:
    matchLabels:
      app: go-grpc-auth-svc
      tier: svc
  template:
    metadata:
      labels:
        app: go-grpc-auth-svc
        tier: svc
    spec:
      containers:
      - name: go-grpc-auth-svc
        image: utils-go-grpc-auth-svc
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50051
---
###AUTH SVC SERVICE
apiVersion: v1
kind: Service
metadata:
  name: go-grpc-auth-svc
spec:
  selector:
    app: go-grpc-auth-svc
    tier: svc
  ports:
    - port: 50051
      targetPort: 50051
      name: auth-svc
      protocol: TCP
