utils/k8s/order-svc_deployment.yaml
###order SVC DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-grpc-order-svc
  labels:
    app_name: go-grpc-project
    app: go-grpc-order-svc
    tier: svc
spec:
  selector:
    matchLabels:
      app: go-grpc-order-svc
      tier: svc
  template:
    metadata:
      labels:
        app: go-grpc-order-svc
        tier: svc
    spec:
      containers:
      - name: go-grpc-order-svc
        image: utils-go-grpc-order-svc
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50053
---
###order SVC SERVICE
apiVersion: v1
kind: Service
metadata:
  name: go-grpc-order-svc
spec:
  selector:
    app: go-grpc-order-svc
    tier: svc
  ports:
    - port: 50053
      targetPort: 50053
      name: order-svc
      protocol: TCP
