utils/k8s/product-svc_deployment.yaml
###PRODUCT SVC DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-grpc-product-svc
  labels:
    app_name: go-grpc-project
    app: go-grpc-product-svc
    tier: svc
spec:
  selector:
    matchLabels:
      app: go-grpc-product-svc
      tier: svc
  template:
    metadata:
      labels:
        app: go-grpc-product-svc
        tier: svc
    spec:
      containers:
      - name: go-grpc-product-svc
        image: utils-go-grpc-product-svc
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 50052
---
###PRODUCT SVC SERVICE
apiVersion: v1
kind: Service
metadata:
  name: go-grpc-product-svc
spec:
  selector:
    app: go-grpc-product-svc
    tier: svc
  ports:
    - port: 50052
      targetPort: 50052
      name: product-svc
      protocol: TCP
